<resources>
    <string name="app_name">My Android App</string>
    <string name="edit_message" translatable="false">Enter a message</string>
    <string name="button_send" translatable="false">Send</string>
</resources>
